--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Prabhakar Y 
 logo: /assets/img/headshot_circle.png
-#description: text below image
+description: QA ENGINEER | AUTOMATION | PERFORMANCE | REST API
 show_downloads: true
 theme: jekyll-theme-minimal
