--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Prabhakar Y 
-logo: /assets/img/headshot_circle.png
+logo: /assets/img/Profile_img.jpg
 description: QA ENGINEER | AUTOMATION | PERFORMANCE | REST API
 show_downloads: true
 theme: jekyll-theme-minimal
