--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Prabhakar Y 
 logo: /assets/img/Prabhakar_Profile_img.png
 description: QA ENGINEER|AUTOMATION|PERFORMANCE|REST API
-show_downloads: false
+show_downloads: true
 theme: jekyll-theme-minimal
